ecmascript/parser/tests/test262-error-references/fail/dc5864c9096ad0a8.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/dc5864c9096ad0a8.js:1:17
  |
1 | [a, ...b, {c=0}]
  |                 ^

error: Unexpected token
 --> $DIR/tests/test262-parser/fail/dc5864c9096ad0a8.js:1:12
  |
1 | [a, ...b, {c=0}]
  |            ^^^

